--- a/Instagram/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/Instagram/app/src/main/res/layout/activity_editar_perfil.xml
@@ -19,13 +19,13 @@
         android:padding="15dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imagePerfil"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:id="@+id/imageEditarPerfil"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:src="@drawable/avatar" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textAlterarFoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Alterar Foto"
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editNomePerfil"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_perfil_preto_24dp"
@@ -50,6 +51,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editEmailPerfil"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_email_black_24dp"
@@ -58,10 +60,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/buttonSalvarAlteracoes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Salvar Alterações" />
 
     </LinearLayout>
 
