--- a/Instagram/app/src/main/res/layout/fragment_perfil.xml
+++ b/Instagram/app/src/main/res/layout/fragment_perfil.xml
@@ -123,7 +123,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonEditarPerfil"
+        android:id="@+id/buttonAcaoPerfil"
         android:layout_width="0dp"
         android:layout_height="21dp"
         android:layout_marginStart="8dp"
