--- a/Instagram/app/src/main/res/layout/fragment_perfil.xml
+++ b/Instagram/app/src/main/res/layout/fragment_perfil.xml
@@ -144,6 +144,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:numColumns="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
